# simple-gui-engine

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Engine.hpp  main.cpp
src/Graphics/: Button.hpp  ButtonClickManager.cpp  ButtonClickManager.hpp  ButtonDefaults.hpp  ButtonRenderer.cpp  ButtonRenderer.hpp  Font.cpp  Font.hpp  FontRenderer.cpp  FontRenderer.hpp  Rectangle.hpp  RectangleDefaults.hpp  RectangleRenderer.cpp  RectangleRenderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Text.hpp  TextDefaults.hpp  ToggleButton.hpp  ToggleButtonDefaults.hpp  Window.cpp  Window.hpp
src/Input/: Input.cpp  Input.hpp  Keycodes.hpp
src/Shaders/: flat_color.frag  flat_color.vert  text.frag  text.vert
src/Util/: Callback.hpp  FileUtil.hpp  Timer.hpp
